# shoggoth-engine

./: .gitignore  CMakeLists.txt  FindASSIMP.cmake  FindGLEW.cmake  README.md  TODO  commands.txt  ingame-scene.xml  scene.xml
assets/materials/: black.material  blue.material  color-grid.material  cyan.material  default.material  diffuse.material  green.material  grid.material  magenta.material  red.material  white.material  yellow.material
assets/materials/shaders/: default.vert  flat.frag  gouraud.frag
assets/meshes/: char.dae  companioncube.dae  icosphere3.dae.model  materialtest.dae  materialtest.dae.model
assets/scenes/: demo.xml
assets/scripts/: 1-initialization.txt  2-initialize-scene.txt  4-shutdown.txt
include/: CMakeLists.txt  demo.hpp  testcomponent.hpp  testcomponentfactory.hpp
include/engine/kernel/: command.hpp  commandobject.hpp  common.hpp  component.hpp  device.hpp  entity.hpp  inputmanager.hpp  inputs.hpp  matrix3x3.hpp  quaternion.hpp  scalar.hpp  scene.hpp  scenemanager.hpp  terminal.hpp  tokentable.hpp  transform.hpp  vector3.hpp  xmlinfo.hpp
include/engine/physics/: physicsworld.hpp  rigidbody.hpp
include/engine/renderer/: camera.hpp  culling.hpp  light.hpp  renderablemesh.hpp  renderer.hpp
include/engine/resources/: material.hpp  mesh.hpp  model.hpp  modelloader.hpp  resources.hpp  texture.hpp
include/shoggoth-engine/: linearmath.hpp
include/shoggoth-engine/common/: common.hpp  uniqueidgenerator.hpp  xmlinfo.hpp
include/shoggoth-engine/kernel/: color4.hpp  command.hpp  component.hpp  componentfactory.hpp  device.hpp  entity.hpp  matrix3x3.hpp  mesh.hpp  model.hpp  modelloader.hpp  quaternion.hpp  scene.hpp  terminal.hpp  tokentable.hpp  transform.hpp  vector3.hpp  xmlinfo.hpp
include/shoggoth-engine/linearmath/: matrix3x3.hpp  quaternion.hpp  scalar.hpp  transform.hpp  vector3.hpp
include/shoggoth-engine/physics/: physicsworld.hpp  rigidbody.hpp
include/shoggoth-engine/renderer/: camera.hpp  culling.hpp  light.hpp  material.hpp  opengl.hpp  renderablemesh.hpp  renderer.hpp  shader.hpp  texture.hpp
include/shoggoth-engine/resources/: mesh.hpp  model.hpp  resources.hpp  texture.hpp
src/: CMakeLists.txt  demo.cpp  main.cpp  test.cpp  testcomponent.cpp  testcomponentfactory.cpp
src/engine/: CMakeLists.txt
src/engine/kernel/: command.cpp  commandobject.cpp  component.cpp  componentfactory.cpp  device.cpp  entity.cpp  inputs.cpp  scene.cpp  scenemanager.cpp  terminal.cpp  tokentable.cpp
src/engine/physics/: physicsworld.cpp  rigidbody.cpp
src/engine/renderer/: camera.cpp  culling.cpp  light.cpp  renderablemesh.cpp  renderer.cpp
src/engine/resources/: material.cpp  mesh.cpp  model.cpp  modelloader.cpp  resources.cpp  texture.cpp
src/shoggoth-engine/: CMakeLists.txt
src/shoggoth-engine/kernel/: command.cpp  commandobject.cpp  component.cpp  componentfactory.cpp  device.cpp  entity.cpp  inputs.cpp  mesh.cpp  model.cpp  modelloader.cpp  scene.cpp  terminal.cpp  tokentable.cpp
src/shoggoth-engine/physics/: physicsworld.cpp  rigidbody.cpp
src/shoggoth-engine/renderer/: camera.cpp  culling.cpp  light.cpp  material.cpp  opengl.cpp  renderablemesh.cpp  renderer.cpp  shader.cpp  texture.cpp
src/shoggoth-engine/resources/: material.cpp  mesh.cpp  model.cpp  modelloader.cpp  resources.cpp  texture.cpp
